# mcp-own-cursor-rules

./: HOSTED_SETUP.md  INSTALLATION.md  LICENSE  README.md  package.json  pyproject.toml  run.py
examples/: usage_examples.md
src/: __init__.py  main.py
